# anchor-shield

./: ARCHITECTURE.md  README.md  demo.py  requirements.txt  setup.sh
.github/workflows/: tests.yml
adversarial/: __init__.py  synthesizer.py
agent/: __init__.py  __main__.py  attestation.py  autonomous.py  cli.py  config.py  indexer.py  orchestrator.py
dashboard/: package.json
dashboard/src/: App.jsx  demoReport.json  scanner.js
examples/: attestation-demo.json  scan-report.json
examples/demo-output/: SECURITY_REPORT.json  exploit_results.txt  semantic_analysis_result.txt  static_scan_result.txt
examples/vulnerable-lending/src/: lib.rs
exploits/: exploit_collateral_bypass.ts  exploit_liquidation_overflow.ts  exploit_withdraw_drain.ts
programs/security_attestation/: Cargo.toml
programs/security_attestation/src/: lib.rs
scanner/patterns/: init_if_needed.py
semantic/: __init__.py  analyzer.py
tests/: test_agent.py
