[package]
name = "security-attestation"
version = "0.1.0"
description = "On-chain security attestation program for anchor-shield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "security_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
